--- a/vue-front/nginx.conf
+++ b/vue-front/nginx.conf
@@ -34,7 +34,7 @@ http {
         server_name localhost;
 
         location /api/ {
-            proxy_pass http://172.17.0.4:9080/;
+            proxy_pass http://tomcat10:9080/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
